Making more PWA changes

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Calculadora Judicial",
+    "name": "Calculadora de Custas Judiciais",
     "short_name": "CalcJud",
     "theme_color": "#170800",
     "background_color": "#170800",
